Fixed the green button not showing on logic took out code for green

--- a/CalculationCSharp/Content/Site.css
+++ b/CalculationCSharp/Content/Site.css
@@ -79,6 +79,9 @@ label {
 .red {
     background-color: red;
 }
+.green {
+    background-color: green;
+}
 .redrow {
     background-color: #c47d7d;
     color:white;  
